--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "ejs": "^2.7.4",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "express-myconnection": "^1.0.4",
     "file-upload": "0.0.0",
     "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
     "serve-favicon": "^2.5.0"
   }
 }
